--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,3 +1,8 @@
-ExampleCourse ExampleDirector 100.5 1Lecturer/2Tutors/2hoursLab false false
-SecondCourse secondDirector 200 2Lecturer/3Tutors false false
-Adv.Programming Mathew 1000.0 Nothing true false
+Course0***Name0***0.0***This is Requirement 0***true***false
+Course1***Name1***100.0***This is Requirement 1***true***false
+Course2***Name2***200.0***This is Requirement 2***true***false
+Course3***Name3***300.0***This is Requirement 3***true***false
+Course4***Name4***400.0***This is Requirement 4***true***false
+Course5***Name5***500.0***This is Requirement 5***true***false
+Course6***Name6***600.0***This is Requirement 6***true***false
+Course7***Name7***700.0***This is Requirement 7***true***false
