--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,4 +1,4 @@
-Course0***Name0***0.0***This is Requirement 0***false***false
+Course0***Name0***0.0***This is Requirement 0***true***false
 Course1***Name1***100.0***This is Requirement 1***true***false
 Course2***Name2***200.0***This is Requirement 2***true***false
 Course3***Name3***300.0***This is Requirement 3***false***false
