--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,9 +1,13 @@
-Course0***Name0***0.0***This is Requirement 0***false***false
-Course1***Name1***100.0***This is Requirement 1***true***false
-Course2***Name2***200.0***This is Requirement 2***false***false
-Course3***Name3***300.0***This is Requirement 3***false***false
-Course4***Name4***400.0***This is Requirement 4***false***false
-Course5***Name5***500.0***This is Requirement 5***false***false
-Course6***Name6***600.0***This is Requirement 6***false***false
-Course7***Name7***700.0***This is Requirement 7***false***false
-Course8***Name7***700.0***This is Requirement 7***false***false
+Course0***Name0***0.0***This is Requirement 0***true***true
+Course1***Name1***100.0***This is Requirement 1***true***true
+Course2***Name2***200.0***This is Requirement 2***true***true
+Course3***Name3***300.0***This is Requirement 3***true***true
+Course4***Name4***400.0***This is Requirement 4***true***false
+Course5***Name5***500.0***This is Requirement 5***true***true
+Course6***Name6***600.0***This is Requirement 6***true***true
+Course7***Name7***700.0***This is Requirement 7***true***false
+Course9***Name8***800.0***This is Requirement 8***true***true
+Course10***Name9***800.0***This is Requirement 9***false***false
+Course11***Name11***800.0***This is Requirement 10***false***true
+Course12***Name11***800.0***This is Requirement 11***false***false
+Course13***Name12***800.0***This is Requirement 12***false***false
