--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,7 +1,7 @@
 Course0***Name0***0.0***This is Requirement 0***true***true
 Course1***Name1***100.0***This is Requirement 1***true***true
 Course2***Name2***200.0***This is Requirement 2***true***true
-Course3***Name3***300.0***This is Requirement 3***false***true
+Course3***Name3***300.0***This is Requirement 3***true***true
 Course4***Name4***400.0***This is Requirement 4***true***false
 Course5***Name5***500.0***This is Requirement 5***true***true
 Course6***Name6***600.0***This is Requirement 6***true***true
@@ -9,5 +9,6 @@ Course7***Name7***700.0***This is Requirement 7***true***false
 Course9***Name8***800.0***This is Requirement 8***true***true
 Course10***Name9***800.0***This is Requirement 9***true***false
 Course11***Name11***800.0***This is Requirement 10***true***true
-Course12***Name11***800.0***This is Requirement 11***true***false
+Course12***Name11***800.0***This is Requirement 11***true***true
 Course13***Name12***800.0***This is Requirement 12***true***false
+TestMerge***TestTest***123.0***TestTestTestTestTestTest***true***false
