--- a/Requirements.txt
+++ b/Requirements.txt
@@ -17,3 +17,4 @@ OneMoreTest***Yirong Li***10.0***I am sleepy***false***false
 LastTest***YirongLi***0.0***Fill the space***false***false
 Real Last Test***Yirong Li***0.0***We need to test more***true***false
 TestCourseName***TestName***300.0***Test Requirements***true***true
+Software Engining MSC***Chentao Zhou***5000.0***An Alienware***false***false
